--- a/.README.md
+++ b/.README.md
@@ -1,7 +1,7 @@
 ## {{ (datasource "git").name }}
 {{ (datasource "section").warning }}
 
-Terraform module to install [github authorized keys](https://github.com/cloudposse/github-authorized-keys) on ec2 instance with user data script
+Terraform module designed to use template file to generate the bootstrap shell script to install [github authorized keys](https://github.com/cloudposse/github-authorized-keys)
 
 {{ (datasource "terraform").input }}
 
